# syclRayTracer

./: .gitignore  CMakeLists.txt  Test.cpp  configure.sh  debugBuild.sh  debugRun.sh
Model/: 2.mtl
c++Implementation/: CMakeLists.txt  configure.sh  debugBuild.sh  debugRun.sh  run.sh  simulation.cpp
c++Implementation/include/: BVHArray.hpp  Camera.hpp  DiffuseMaterial.hpp  GeometryList.hpp  Intersection.hpp  Material.hpp  MaterialList.hpp  OBJ_Loader.hpp  Object.hpp  ObjectList.hpp  Scene.hpp  Triangle.hpp  Vec.hpp  common.hpp
include/: BVH.hpp  Bounds3.hpp  Material.hpp  OBJ_Loader.hpp  Scene.hpp  Scene1.hpp  syclScene.hpp  sycl_obj_loader.hpp
src/: BVH.cpp
syclImplementation/: CMakeLists.txt  Test.cpp  configure.sh
syclImplementation/include/: BVH.hpp  BVHArray.hpp  DiffuseMaterial.hpp  Geometry.hpp  GeometryList.hpp  Intersection.hpp  Material.hpp  MaterialList.hpp  OBJ_Loader.hpp  Object.hpp  ObjectList.hpp  Triangle.hpp  Vec.hpp  common.hpp  syclScene.hpp  sycl_BVH.hpp  sycl_obj_loader.hpp
